app-test/testdata/typesystem/neg/type-construction-arg-number/check/cons.check
testdata/typesystem/neg/type-construction-arg-number/src/cons.cal:5:20: error: Wrong number of arguments; expected 2, but was 3.
           OUT <-- T(1, true, 2.5); // error
                   ^^^^^^^^^^^^^^^